# ComfyUI-Meta-Viewer

./: .eslintrc.json  .gitignore  README.md  benchmark.bat  benchmark.sh  eslint.config.js  package-lock.json  package.json  pyproject.toml  start.bat  start.sh
app/: config_store.py  cutout.py  database.py  extractor.py  file_actions.py  folder_picker.py  indexing.py  library.py  main.py  media.py  paths.py  preview.py  reset_service.py  schemas.py  source_monitor.py  worker.py
cache/: meta.db
dev_docs/: SMART_CUTOUT.md  plan.md  sprint-object-cutout.md  sprint-redesign.md
docs/: README.md  ai-intent-benchmark.md  ai-opencode-smoke-testing.md  ai-prompt-architecture.md  ai-smoke-testing.md  api.md  architecture.md  configuration.md  css-architecture.md  development.md  features.md  index.html  installation.md  js-architecture.md  site.css
tests/: test_ai_job_store.py  test_ai_providers.py  test_ai_ranking.py  test_ai_skills.py  test_ai_smoke.py  test_architecture_interior_prompt_scenario.py  test_comfyui_integration.py  test_cross_platform_paths.py  test_direct_prompt_execution.py  test_execution_router.py  test_extractor.py  test_graphic_design_text_prompt_scenario.py  test_illustration_art_prompt_scenario.py  test_intent_benchmark.py  test_intent_benchmark_cli.py  test_intent_benchmark_strict_policy.py  test_landscape_environment_prompt_scenario.py  test_lazy_upload.py  test_library.py  test_managed_process.py  test_media_assets.py  test_media_files.mjs  test_metadata_format.mjs  test_model_resources.py  test_opencode_prompt_execution.py  test_preferences.mjs  (+13 more)
(+173 files in other folders)
