[tool.poetry]
name = "comfy-meta-viewer"
version = "1.0.0"
description = "ComfyUI image metadata viewer"
authors = ["You"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
flask = "^3.1"
pillow = "^11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
