[tool.poetry]
name = "comfy-meta-viewer"
version = "1.0.0"
description = "ComfyUI image metadata viewer"
authors = ["Lotargo"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
flask = "^3.1"
pillow = "^11.0"
pydantic = "^2.0"
watchdog = "^6.0"
send2trash = "^2.1"
keyring = "^25.7"
rich = "^14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
